# Compmath4

./: .gitignore  CMakeLists.txt  README.md  main.cpp  p.plot
functions/: IFunc.h  Polynomial.cpp  Polynomial.h  func1.cpp  func1.h
generator/: Generator.cpp  Generator.h
pregresion/: Polynomial_regression.cpp  Polynomial_regression.h
scaller/: StandartScaller.cpp  StandartScaller.h
